# FastAPI-eco-map-almaty

./: README.md
backend/: .gitignore  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0b51613d63d8_add_ecological_columns_to_lakes.py  3c3d0d3329a6_create_water_quality_table.py  7f8fd55ec58e_create_coordinates_table.py  8680215d72f2_drop_coordinates_table.py  9615b1b5686d_create_lakes_table.py  9c2720dd95c3_rename_lakes_to_water_objects.py  ab463c56ebd1_remove_ulek_columns_from_water_objects.py  c4e5f6a7b8c9_add_coordinates_description_to_water_objects.py  d1e2f3a4b5c6_create_users_table.py  dfcfe2385124_replace_password_with_firebase_uid.py
backend/app/: db.py  main.py
backend/app/api/: auth.py  lakes.py  water_models.py
backend/app/models/: __init__.py  lake.py  user.py  waterObject.py  water_object.py  water_quality.py
backend/app/schemas/: lake.py  user_schemas.py  water_schemas.py
backend/app/services/: __init__.py  firebase_service.py
